# dredd-compiler-testing

./: README.md  gcc-3.4.6.patch  gcc-4.8.2.patch  llvm.patch
cleanup-reducer/: CMakeLists.txt  cleanupreducer.py
cleanup-reducer/src/: CPPLINT.cfg  iwyu.imp
cleanup-reducer/src/cleanupreducer/: CMakeLists.txt
cleanup-reducer/src/cleanupreducer/src/: main.cc
cleanup-reducer/src/libcleanupreducer/: CMakeLists.txt
cleanup-reducer/src/libcleanupreducer/include/libcleanupreducer/: cleanup_reducer_options.h  new_cleanup_frontend_action_factory.h  util.h
cleanup-reducer/src/libcleanupreducer/include_private/include/libcleanupreducer/: cleanup_ast_consumer.h  cleanup_visitor.h
cleanup-reducer/src/libcleanupreducer/src/: cleanup_ast_consumer.cc  cleanup_visitor.cc  new_cleanup_frontend_action_factory.cc  util.cc
dredd_test_runners/csmith_runner/: main.py
dredd_test_runners/historical_check/: get_clang_llvm_releases.py  main.py
dredd_test_runners/llvm_regression_tests_runner/: main.py
dredd_test_runners/llvm_test_suite_runner/: main.py
dredd_test_runners/package_tests/: main.py
dredd_test_runners/reduce_new_kills/: interesting_crash.py.template  interesting_miscompilation.py.template  main.py
dredd_test_runners/yarpgen_runner/: main.py
lit-patches/: InstCombineVectorOps_mutant-tracking.patch  InstCombineVectorOps_mutated.patch  mutant-tracking.patch  mutated.patch
